applets/notifcations: Set parentWidget for file item actions

BUG:437222